@@ -164,7 +164,7 @@ public class HadamardArgumentService {
 
 		// Calculate s_0, ..., s_(m-1)
 		final List<ZqElement> s_vector_mutable = new ArrayList<>(m);
-		s_vector_mutable.addFirst(r.getFirst());
+		s_vector_mutable.add(0, r.get(0));
 		if (m > 2) {
 			s_vector_mutable.addAll(1, randomService.genRandomVector(q, m - 2));
 		}
@@ -173,7 +173,7 @@ public class HadamardArgumentService {
 
 		// Calculate c_(B_0), ..., c_(B_(m-1))
 		final List<GqElement> c_B_mutable = new ArrayList<>(m);
-		c_B_mutable.addFirst(c_A.getFirst());
+		c_B_mutable.add(0, c_A.get(0));
 		c_B_mutable.addAll(1, IntStream.range(1, m - 1)
 				.parallel()
 				.mapToObj(j -> CommitmentService.getCommitment(b_vectors.get(j), s_vector.get(j), ck))
@@ -348,7 +348,7 @@ public class HadamardArgumentService {
 		final ZeroStatement zeroStatement = new ZeroStatement(c_A_zero_argument, c_D_zero_argument, y);
 		final ZeroArgument zeroArgument = argument.get_zeroArgument();
 
-		return create(() -> c_B.getFirst().equals(c_A.getFirst()), "c_B_0 must equal c_A_0.")
+		return create(() -> c_B.get(0).equals(c_A.get(0)), "c_B_0 must equal c_A_0.")
 				.and(create(() -> c_B.get(m - 1).equals(c_b), "c_B_m_minus_1 must equal c_b."))
 				.and(zeroArgumentService.verifyZeroArgument(zeroStatement, zeroArgument).addErrorMessage("Failed to verify the ZeroArgument."));
 	}
